css/styles.css
/* Typography */
p, legend {
	font-size: 0.75rem;
}
nav {
	position: fixed;
	top: 0;
	padding: 10px 0;
	width: 100%;
	/* For better appearance of box-shadoww element */
	z-index: 3;
	height: 46px;
	background: white;
}

.box-shadow-3 {
	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
}
.box-shadow-3.-fake {
	height: 5px;
	position: fixed;
	top: 40px;
	width:100%;
}


.box-shadow-3.-fake.-white {
	box-shadow: 0 10px 20px rgba(255,255,255,0.40), 0 6px 6px rgba(255,255,255,0.45);
	width:120%;
}


.encryption, .decryption {
	height: 100%;
	padding-top: 3rem; /* due to clipping on link click */
}
.encryption {
	background-color: white;

}
.decryption {
	color: white;
	background-color: black;
}

.encryption h3, .decryption h3 {
  	display: table-row; /* To display in a block-like manner */
}

.bg-gradient.-radial{
	/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ccedff+0,ffffff+100 */
	background: #ccedff; /* Old browsers */
	background: -moz-radial-gradient(center, ellipse cover, #ccedff 0%, #ffffff 100%); /* FF3.6-15 */
	background: -webkit-radial-gradient(center, ellipse cover, #ccedff 0%,#ffffff 100%); /* Chrome10-25,Safari5.1-6 */
	background: radial-gradient(ellipse at center, #ccedff 0%,#ffffff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ccedff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
}

.bg-gradient.-split {
	/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffffff+0,ffffff+50,ffffff+50,000000+50,000000+100 */
	background: #ffffff; /* Old browsers */
	background: -moz-linear-gradient(top,  #ffffff 0%, #ffffff 50%, #ffffff 50%, #000000 50%, #000000 100%); /* FF3.6-15 */
	background: -webkit-linear-gradient(top,  #ffffff 0%,#ffffff 50%,#ffffff 50%,#000000 50%,#000000 100%); /* Chrome10-25,Safari5.1-6 */
	background: linear-gradient(to bottom,  #ffffff 0%,#ffffff 50%,#ffffff 50%,#000000 50%,#000000 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
}

/* Tab Navigation */

#encrypt, #decrypt {
	display: none; /* On mobile screens, poor UX with toggling 'visibility */
}


#encrypt:target, #decrypt:target {
	display: block;
}

#encrypt:target ~ .splash-screen, #decrypt:target ~ .splash-screen {
	height:0;
	top: -100px;
}

@media screen and (min-width: 786px ) {
	
	#encrypt:target, #decrypt:target {
		visibility: visible;
	}

}

